public class Android implements OS {
	public String toString() {
		return "Android operating system";
	}
	
	@Override
	public String getType() {
		return "Android";
	}
	
	@Override
	public String getDescription() {
		return "Android operating system";
	}
}
