public interface Cabinet {
	public String toString();
	public String getSize();
	public String getDescription();
}
