public interface Display {
	public String toString();
	public String getType();
	public String getDescription();
}
