public interface GPU {
	public String getType();
	public String getDescription();
	public String toString();
}
