public class Symbian implements OS {
	public String toString() {
		return "Symbian operating system";
	}
	
	@Override
	public String getType() {
		return "Symbian";
	}
	
	@Override
	public String getDescription() {
		return "Symbian operating system";
	}
}
