public class WindowsME implements OS {
	public String toString() {
		return "Windows Millennium Edition operating system";
	}
	
	@Override
	public String getType() {
		return "Windows ME";
	}
	
	@Override
	public String getDescription() {
		return "Windows Millennium Edition operating system";
	}
}
