public class WindowsXP implements OS {
	public String toString() {
		return "Windows XP operating system";
	}
	
	@Override
	public String getType() {
		return "Windows XP";
	}
	
	@Override
	public String getDescription() {
		return "Windows XP operating system";
	}
}
