public class X86 implements GPU {
	public String toString() {
		return "X86-based graphics processing unit";
	}
	
	@Override
	public String getType() {
		return "X86";
	}
	
	@Override
	public String getDescription() {
		return "X86-based graphics processing unit";
	}
}
